Ver 0.0.1
Latest:
- fixing critical vulnerabilities

Last 10 deployment release notes:
- Adding Completed Courses to the CV
- Updating Eduction components to use UserQualification components and selectors
- Adding Qualification components to service courses and education
- Adding Sentry
- bug fix in Credential widget
- fixing android deploying to FAD
- feat(MySkills): adding skill count to each of the user's skills
- Add/Edit Button
- feat(Utils: Strings): adding a trunc util
- updating cv view components
- feat(About): adding About view, along with refactors to widget and form
