@@ -1,4 +1,6 @@
 import * as middleware from './Countries.middleware'
 import reducer, * as actions from './Countries.reducer'
+import * as types from './Countries.types'
 
 export { middleware, reducer, actions }
+export type { types }
