@@ -1,24 +1,25 @@
-import { Country, getEmojiFlag } from 'countries-list'
+import { getEmojiFlag } from 'countries-list'
 import React from 'react'
 import { Pressable, View } from 'react-native'
 
 import Text, { HeaderLevels } from '~/components/Typography'
+import { CountryList } from '~/modules/Countries/Countries.types'
+import { Colors } from '~/styles'
 
 import styles from './CountryItem.styles'
 
 interface Props {
-  item: [string, Country]
+  item: string
+  countries: CountryList
+  onPress: () => void
 }
-const CountryItem = ({ item }: Props) => (
-  <Pressable
-    onPress={() => {
-      console.log({ name: item[1].name, code: item[0] })
-    }}
-  >
+const CountryItem = ({ item, countries, onPress }: Props) => (
+  <Pressable onPress={onPress}>
     <View style={styles.container}>
-      <Text.Header level={HeaderLevels.H6}>
-        {getEmojiFlag(item[0])} {item[1].name}
+      <Text.Header style={{ paddingRight: 8 }} level={HeaderLevels.H4}>
+        {getEmojiFlag(countries[item].code || '')}
       </Text.Header>
+      <Text.Body color={Colors.FontBlue}>{countries[item].name}</Text.Body>
     </View>
   </Pressable>
 )
