@@ -1,32 +1,34 @@
 import Fuse from 'fuse.js'
 import { useEffect, useMemo, useState } from 'react'
 
-import { filterCountries } from '~/modules/CountrySelectField/CountrySelect/CountrySelect.utils'
-
-import { CountryListItem } from './CountrySelect.types'
-
-export const useCountriesFilter = (countries: CountryListItem[]) => {
-  const [results, setResults] = useState<CountryListItem[]>([])
+export const useCountriesFilter = (countryIds: string[]) => {
+  const [results, setResults] = useState<string[]>([])
   const [searchTerm, setSearchTerm] = useState<string>('')
 
-  useEffect(() => {
-    if (searchTerm.length < 2) {
-      setResults(countries)
-    }
-  }, [countries, searchTerm])
+  const minSearchTermLength = 3
 
   useEffect(() => {
-    if (searchTerm.length > 1 && countries.length > 0) {
-      const fuse = new Fuse<CountryListItem>(countries, {
-        keys: ['name', 'native'],
-      })
-      const filtered = fuse.search(searchTerm) || []
-      const fil = filterCountries(searchTerm)(countries)
-      console.log({ searchTerm, filtered, fil })
+    console.log({ searchTerm })
+    if (searchTerm.length < minSearchTermLength) {
+      setResults(countryIds)
+    }
+  }, [countryIds, searchTerm])
+
+  useEffect(() => {
+    if (searchTerm.length >= minSearchTermLength && !!countryIds) {
+      const fuseOptions = {
+        shouldSort: true,
+        threshold: 0.6,
+        location: 10,
+        includeScore: true,
+        minMatchCharLength: minSearchTermLength,
+      }
+      const fuse = new Fuse<string>(countryIds, fuseOptions)
+      const filtered = fuse.search(searchTerm)
       const filteredCountries = filtered.map(result => result?.item)
       setResults(filteredCountries)
     }
-  }, [searchTerm, countries])
+  }, [searchTerm, countryIds])
 
   const hasNoResults = useMemo(() => searchTerm !== '' && results.length === 0, [results.length, searchTerm])
 
