@@ -1,8 +1,8 @@
 import React from 'react'
 import { useTranslation } from 'react-i18next'
 
-import CountryPickerField from '~/components/CountryPickerField'
 import Input from '~/components/Input'
+import CountrySelectField from '~/modules/CountrySelectField'
 
 const ProfileForm = () => {
   const { t } = useTranslation()
@@ -11,7 +11,12 @@ const ProfileForm = () => {
     <>
       <Input name={'firstName'} label={t('firstName')} />
       <Input name={'lastName'} label={t('Surname')} />
-      <CountryPickerField name="countryAlpha2" label={t('Country')} />
+      <CountrySelectField
+        name="countryAlpha2"
+        label={t('Country')}
+        searchPlaceholder="Filter countries"
+        modalHeader="Select your country"
+      />
       <Input name={'email'} label={t('Email')} keyboardType="email-address" autoCapitalize="none" />
       <Input name={'phoneNumber'} label={t('Cellphone')} keyboardType="phone-pad" autoCapitalize="none" />
     </>
